# bazel-kls-bzlmod-example

./: .bazelrc  MODULE.bazel  README.md  maven_install.json
src/main/kotlin/com/foo/helloworld/: Application.kt  HelloController.kt
